Last slides added

--- a/index.html
+++ b/index.html
@@ -219,6 +219,18 @@ while (true) {
             <p><strong>Merke:</strong> node.js ist eine schlechte Idee für CPU-gebundene Algorithmen.</p>
             <p>Zukünftige Lösung: WebWorkers!</p>
         </div>
+
+        <div class="slide">
+            <div class="big">
+                <div>Kleines Beispiel gefällig?</div>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="big">
+                <div>Danke für die Aufmerksamkeit!</div>
+            </div>
+        </div>
     </section>
     <script type="text/javascript" charset="utf-8"
             src="js/jquery.min.js"></script>
