Removed debug code

--- a/welchat/static/index.html
+++ b/welchat/static/index.html
@@ -29,7 +29,7 @@
     <script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function () {
-            var debug = true,
+            var debug = false,
                 stop_poll = false;
 
             function log(message) {
