--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="presentation">
         <div class="slide intro">
-            <h1>Sass - Style with attitude</h1>
+            <h1>Sass - Syntactically Awesome Stylesheets</h1>
             <h2>Daniel Banck</h2>
             <p>
                 <strong>Campfire One</strong>, 30. März 2010
